fixtures/frontend/milestone-2/invalid/duplicate-top-level-names/main.aivi
value title = "Primary"
value title = "Secondary"
